--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -16,7 +16,17 @@
    z-index:104;
    
 
-
+   p{
+      @media #{$desktop}{
+         margin: 0 4rem;
+      }
+   }
+   @media #{$desktop}{
+      flex-direction:row;
+      justify-content: center;
+      justify-items: center;
+      width:100%; 
+    }
 
 
    :hover{
@@ -41,8 +51,15 @@
          padding:0 1rem;
          margin:0;
          padding:0;
-         color:white;
+         color:rgb(107, 107, 107);
          font-weight: 200;
+         @media #{$desktop}{
+            font-size:1.4rem;
+            margin-left:1rem;
+      
+      
+         }
+      
      }
 
 
@@ -62,6 +79,18 @@
 
 .footer_social_container{
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
+   align-content: center;
+   background-color: black;
+   width:100%;
+   justify-content: center;
+   align-content: center;
+   align-items: center;
+   padding-bottom:2rem;
+   color: white;
+   @media #{$desktop}{
+    
 
+
+   }
 }
