--- a/pages/institucional/index.module.scss
+++ b/pages/institucional/index.module.scss
@@ -64,14 +64,14 @@
    flex-direction:column;
    align-items: center;
    align-content: center;
-   justify-content:flex-start;
-   justify-items: flex-start;
+   justify-content:center;
+   justify-items: center;
    height:100%;
    @media #{$desktop}{
       padding:5% 15%;
       height:100%;
-      align-content: flex-start;
-      align-items: flex-start;
+      align-content: center;
+      align-items: center;
       
    }
 
