arreglados typos socios

--- a/styles/constants.scss
+++ b/styles/constants.scss
@@ -16,6 +16,23 @@ $black: #01111f;
 $mobile: "only screen and (max-width : 800px)";
 $desktop: "only screen and (min-width : 801px)";
 
+
+
+
+.negrita_marca{
+   font-style: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
 .master_container{
    // background-color:$darkRed;
    // background-image:url('/background.png');
